[hw8] update Products api
