# hw8__swagger_generated/api/swagger/swagger.yaml
@@ -97,7 +97,7 @@ paths:
       summary: Create new product
       description: Create new 'Product'
       # used as the method name of the controller
-      operationId: createProduct
+      operationId: addProduct
       parameters: 
       - in: body
         name: product
@@ -106,6 +106,8 @@ paths:
           type: object
           required:
           - name
+          - brand
+          - price
           properties:
             name:
               type: string
@@ -113,14 +115,14 @@ paths:
               type: string
             price:
               type: string
-            options:
+            #options:
               # complex types are stringified to support RFC 1866
-              type: object
-              properties:
-                color:
-                  type: string
-                size:
-                  type: string  
+            #  type: object
+            #  properties:
+            color:
+              type: string
+            size:
+              type: string  
         
 #      requestBody:
 #        content:
@@ -157,7 +159,7 @@ paths:
 
   /products/{productId}:
       # binds a127 app logic to a route
-      x-swagger-router-controller: productsIds
+      x-swagger-router-controller: products
       
       parameters:
       - name: productId
@@ -172,7 +174,7 @@ paths:
         summary: Retrieve specified product
         description: Returns specify 'Product' to the caller
         # used as the method name of the controller
-        operationId: getSpecifyProduct
+        operationId: getProductById
     
         responses:
           "200":
@@ -195,12 +197,12 @@ paths:
         # used as the method name of the controller
         operationId: deleteProduct
         
-        parameters:
-          - name: id
-            in: query
-            description: The id of the product to whom needs to delete
-            required: true
-            type: string
+        #parameters:
+       #   - name: id
+        #    in: query
+        #    description: The id of the product to whom needs to delete
+        #    required: true
+        #    type: string
         responses:
           "200":
             description: Success
@@ -217,6 +219,7 @@ paths:
 # complex objects have schema definitions
 definitions:
   GetProductsResponse:
+    type: object 
     required:
       - status
       - result
@@ -227,24 +230,26 @@ definitions:
         type: array
         items:
           properties:
-            _id:
-              type: string
             productId:
-              type: string
+              type: number
             name:
               type: string
             brand:
               type: string
+            price:
+              type: string
             options:
+              type: object
               properties:
                 color:
                   type: string
                 size:
                   type: string
+            lastModifiedDate:
+              type: string
+                  
   GetUserResponse:
-    required:
-      - status
-      - result
+    type: object
     properties:
       status: 
         type: string
@@ -252,8 +257,6 @@ definitions:
         type: array
         items:
           properties:
-            _id:
-              type: number
             userId:
               type: number
             username:
@@ -277,10 +280,10 @@ definitions:
       result: # 'DELETED'
         type: string
   ErrorResponse:
-    required:
-      - status
-      - code
-      - result
+    #required:
+     # - status
+    #  - code
+     # - result
     properties:
       status:
         type: string #'ERROR'
